# AssetWizard

./: .clang-format  .editorconfig  .gitmodules  Attribution.txt  CMakeLists.txt  Icon.rc  README.md
Backend/src/: Main.cpp
Backend/src/App/: ProgramArgs.cpp  ProgramArgs.hpp
Backend/src/UI/: FrontendUtil.cpp  FrontendUtil.hpp
Frontend/: package-lock.json  package.json  tsconfig.json
Frontend/public/: index.html
Frontend/src/: App.scss  App.tsx  index.scss
Frontend/src/common/: webviewApi.ts
Frontend/src/common/messaging/: events.ts
Frontend/src/common/ui/: getBounds.ts
Frontend/src/components/: index.ts
Frontend/src/components/Menu/: Menu.module.scss  Menu.tsx
Frontend/src/components/Navbar/: Navbar.module.scss  Navbar.tsx
Frontend/src/components/Panels/: index.ts
Frontend/src/components/Panels/AssetBrowser/: AssetBrowser.tsx  index.ts
Frontend/src/components/Panels/GameViewport/: GameViewport.scss  GameViewport.tsx  index.ts
Frontend/src/components/WindowControl/: WindowControl.module.scss  WindowControl.tsx
Frontend/src/themes/: dockview.scss
